# vertigo_slam

./: CHANGELOG.rst  CMakeLists.txt  README  package.xml
examples/robustG2O/: incremental_optimization.cpp  load_dataset_test.cpp
launch/: vertigo.launch
src/g2o/: edge_se2MaxMixture.cpp  edge_se2Switchable.cpp  edge_se3Switchable.cpp  edge_switchPrior.cpp  types_g2o_robust.cpp  vertex_switchLinear.cpp
