<?xml version="1.0"?>
<package>
  <name>vertigo_slam</name>
  <version>0.0.0</version>
  <description>The vertigo slam package</description>

  <maintainer email="liz@todo.todo">liz</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libg2o</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libg2o</run_depend>
</package>
